Applying InnoDB snashot 6.0-ss3256, part 3; fixes:

Bug #37232: Innodb might get too many read locks for DML with repeatable-read

Detailed revision comments:

r2604 | inaam | 2008-08-21 09:37:06 -0500 (Thu, 21 Aug 2008) | 8 lines
branches/6.0     bug#37232

Relax locking behaviour for REPLACE INTO t SELECT ... FROM t1.
Now SELECT on t1 is performed as a consistent read when the isolation
level is set to READ COMMITTED.

Reviewed by: Heikki